--- a/admin/css/paw.designer.css
+++ b/admin/css/paw.designer.css
@@ -3,7 +3,7 @@
  |  paw.Designer - A advanced Theme Engine for Bludit
  |  @file       ./admin/css/paw.designer.css
  |  @author     SamBrishes <sam@pytes.net>
- |  @version    0.1.0
+ |  @version    0.1.1 [0.1.0] - Alpha
  |
  |  @website    https://github.com/pytesNET/paw.designer
  |  @license    X11 / MIT License
@@ -86,12 +86,12 @@
 }
 
 /* Copyright https://codepen.io/claviska/pen/KyWmjY */
-.switch{
+.paw-switch{
     margin-top: 5px;
     font-size: 1rem;
     position: relative;
 }
-.switch input{
+.paw-switch input{
     position: absolute;
     height: 1px;
     width: 1px;
@@ -102,7 +102,7 @@
     overflow: hidden;
     padding: 0;
 }
-.switch input + label{
+.paw-switch input + label{
     position: relative;
     min-width: calc(calc(2.375rem * .8) * 2);
     border-radius: calc(2.375rem * .8);
@@ -115,8 +115,8 @@
     vertical-align: middle;
     text-indent: calc(calc(calc(2.375rem * .8) * 2) + .5rem);
 }
-.switch input + label::before,
-.switch input + label::after{
+.paw-switch input + label::before,
+.paw-switch input + label::after{
     content: '';
     position: absolute;
     top: 0;
@@ -125,13 +125,13 @@
     bottom: 0;
     display: block;
 }
-.switch input + label::before{
+.paw-switch input + label::before{
     right: 0;
     background-color: #dee2e6;
     border-radius: calc(2.375rem * .8);
     transition: 0.2s all;
 }
-.switch input + label::after{
+.paw-switch input + label::after{
     top: 2px;
     left: 2px;
     width: calc(calc(2.375rem * .8) - calc(2px * 2));
@@ -140,62 +140,62 @@
     background-color: white;
     transition: 0.2s all;
 }
-.switch input:checked + label::before{
+.paw-switch input:checked + label::before{
     background-color: #08d;
 }
-.switch input:checked + label::after{
+.paw-switch input:checked + label::after{
     margin-left: calc(2.375rem * .8);
 }
-.switch input:focus + label::before{
+.paw-switch input:focus + label::before{
     outline: none;
     box-shadow: 0 0 0 0.2rem rgba(0, 136, 221, 0.25);
 }
-.switch input:disabled + label{
+.paw-switch input:disabled + label{
     color: #868e96;
     cursor: not-allowed;
 }
-.switch input:disabled + label::before{
+.paw-switch input:disabled + label::before{
     background-color: #e9ecef;
 }
-.switch.switch-sm{
+.paw-switch.paw-switch-sm{
     font-size: 0.875rem;
 }
-.switch.switch-sm input + label{
+.paw-switch.paw-switch-sm input + label{
     min-width: calc(calc(1.9375rem * .8) * 2);
     height: calc(1.9375rem * .8);
     line-height: calc(1.9375rem * .8);
     text-indent: calc(calc(calc(1.9375rem * .8) * 2) + .5rem);
 }
-.switch.switch-sm input + label::before{
+.paw-switch.paw-switch-sm input + label::before{
     width: calc(calc(1.9375rem * .8) * 2);
 }
-.switch.switch-sm input + label::after{
+.paw-switch.paw-switch-sm input + label::after{
     width: calc(calc(1.9375rem * .8) - calc(2px * 2));
     height: calc(calc(1.9375rem * .8) - calc(2px * 2));
 }
-.switch.switch-sm input:checked + label::after{
+.paw-switch.paw-switch-sm input:checked + label::after{
     margin-left: calc(1.9375rem * .8);
 }
-.switch.switch-lg{
+.paw-switch.paw-switch-lg{
     font-size: 1.25rem;
 }
-.switch.switch-lg input + label{
+.paw-switch.paw-switch-lg input + label{
     min-width: calc(calc(3rem * .8) * 2);
     height: calc(3rem * .8);
     line-height: calc(3rem * .8);
     text-indent: calc(calc(calc(3rem * .8) * 2) + .5rem);
 }
-.switch.switch-lg input + label::before{
+.paw-switch.paw-switch-lg input + label::before{
     width: calc(calc(3rem * .8) * 2);
 }
-.switch.switch-lg input + label::after{
+.paw-switch.paw-switch-lg input + label::after{
     width: calc(calc(3rem * .8) - calc(2px * 2));
     height: calc(calc(3rem * .8) - calc(2px * 2));
 }
-.switch.switch-lg input:checked + label::after{
+.paw-switch.paw-switch-lg input:checked + label::after{
     margin-left: calc(3rem * .8);
 }
-.switch + .switch{
+.paw-switch + .paw-switch{
     margin-left: 1rem;
 }
 /* @end GENERAL */
